module14/networkpolicy/access-calico-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http
  # 该策略只用于calico-demo这个 ns  podSelector: {}也是针对这个ns
  namespace: calico-demo 
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 80
